#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(spug++, 0.7, mmuller@enduden.com)
AM_INIT_AUTOMAKE(spug++, 0.7)
AC_CONFIG_SRCDIR([RCPtr.h])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX

# Checks for libraries.
AC_PROG_RANLIB
AC_CHECK_LIB(pthread, pthread_self)

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

# Checks for library functions.

# check whether strerror_r is GNU or posix
AC_MSG_CHECKING([for GNU strerror_r])
AC_LANG_CPLUSPLUS
AC_TRY_RUN([

#include <string.h>
#include <stdio.h>
#include <stdlib.h>

main() {
   char buffer[80];
   const char *error = strerror_r(0, buffer, sizeof(buffer));
   exit(strcmp(error, strerror(0)));
}
],
   AC_DEFINE(HAVE_GNU_STRERROR, 1, [use gnu style strerror_r])
   AC_MSG_RESULT(yes)
,
   AC_MSG_RESULT(no)
)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
